# idol

./: .babelrc  .flowconfig  .gitignore  .prettierrc  .travis.yml  Cargo.toml  Dockerfile.rust  Makefile  Pipfile  README.md  base.nix  build.json  default.nix  package.json  pyproject.toml  setup.py  shell.nix
.circleci/: build.sh  config.yml
bootstrap/: process.ts
bootstrap/models/: flydl.def.ts  flydl.process.ts  flydl.types.ts
flow-typed/: deps.js
idol_js.jswXLV9H/: declarations.js  schema.js
scripts/: idol_rs
src/: README.md  config.rs  deconstructors.rs  dep_mapper.rs  display.rs  err.rs  lib.rs  loader.rs  module_resolver.rs  modules_store.rs  registry.rs  schema.rs  type_builder.rs  type_comparison.rs  type_composer.rs  type_dec_parser.rs  type_resolver.rs  utils.rs
src/generators/: acc_monad.rs  build_env.rs  declarable.rs  escaped.rs  features.rs  generator.rs  identifiers.rs  idol_rs.rs  mod.rs  project.rs  project_monad.rs  scope.rs  slotted_buffer.rs
src/lib/: setup.py
src/models/: __idol__.py  declarations.rs  declarations.toml  loaded.rs  loaded.toml  mod.rs  schema.py  schema.rs  schema.toml
src/models2/: __idol__.py  declarations.py  schema.py
src/type_builder/: composer.rs  denormalized.rs  mod.rs
test/: Cargo.toml  Makefile  package.json  pip3  python3  run_composition_tests.sh  run_generator_tests.sh  run_tests.sh
test/cases/: expand_lists.json  validate_expanded_empty.json  validate_lists_expanded_invalid.json
test/composition/: run_composition_tests.sh
test/expected/: expand_empty.json  expand_lists.json
(+571 files in other folders)
