[package]
name = "idol"
version = "0.6.0"
authors = ["Zach Collins <recursive.cookie.jar@gmail.com>"]
edition = "2018"


[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.0"
serde_json = "1.0"
regex = "1"
lazy_static = "1.3.0"
is_executable = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
fs_extra = "1.1.0"
tempdir = "0.3.7"
toml = "0.5"
quote = "1.0.3"
proc-macro2 = "1.0"
